# mantis-dns

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/ui/: Dockerfile  Dockerfile.prod  index.html  nginx.conf.template  nginx.https.conf.template  package-lock.json  package.json  vite.config.ts
apps/ui/scripts/: gen-api.mjs
apps/ui/src/: App.css  App.tsx  FeedManager.tsx  api.ts  categoryIcons.tsx  i18n.ts  main.tsx  theme.ts
charts/aegis-dns/: Chart.yaml  values.yaml
charts/aegis-dns/templates/: NOTES.txt  _helpers.tpl  (+5 more)
charts/mantis-dns/: Chart.yaml  values.yaml
docs/: deploy-lxc.md  design-block-page.md  design.md  sprint-plan.md
infra/: prometheus.yml
infra/cloud-init/: user-data.yaml.tmpl
infra/lxc/: install-rocky.sh  install.sh  lib-update.sh  mantis-control.service
integrations/wazuh/: README.md  local_rules.xml  mantis_siem_pull.py  ossec.conf.snippet.xml  run-mantis-pull.sh  wazuh-integration.env.example
packaging/filter/: aegis-filter.env  aegis-filter.service  mantis-filter.env  mantis-filter.service  nfpm.yaml  postinstall.sh  preremove.sh
proto/: bundle.proto
scripts/: bootstrap.ps1  bootstrap.sh  dhcp_testbench.sh  render-cloud-init.ps1  render-cloud-init.sh  test_category_bloom_docker.sh  update.sh
services/control/: Dockerfile  Dockerfile.prod  pyproject.toml
services/control/aegis_control/: audit.py  auth.py  config.py  crypto.py  main.py  rate_limit.py  scheduler.py  siem_delivery.py  ssrf_guard.py
services/control/aegis_control/api/: audit_routers.py  auth_routers.py  client_routers.py  dhcp6_routers.py  dhcp_internal_routers.py  dhcp_routers.py  feed_routers.py  routers.py  schemas.py  siem_routers.py  siem_webhook_routers.py  telemetry_routers.py  upstream_routers.py  zone_routers.py
services/control/aegis_control/compiler/: bloom.py  build_empty_bundle.py  build_policy_bundle.py  gen_bloom_fixture.py  keys.py  signing.py
services/control/aegis_control/db/: models.py  session.py
services/control/aegis_control/dhcp/: kea_config.py  kea_config6.py  lease_sync.py
services/control/aegis_control/feeds/: catalog.json  ingest.py  parsers.py  seed.py
services/control/mantis_control/: audit.py  auth.py  block_page.py  categories.py  config.py  crypto.py  main.py  rate_limit.py  reindex.py  retention.py  scheduler.py  siem_common.py  siem_delivery.py  siem_syslog_delivery.py  ssrf_guard.py
services/control/mantis_control/api/: audit_routers.py  auth_routers.py  client_routers.py  dhcp6_routers.py  dhcp_internal_routers.py  dhcp_routers.py  feed_routers.py  routers.py  schemas.py  siem_routers.py  siem_syslog_routers.py  siem_webhook_routers.py  telemetry_routers.py  upstream_routers.py  zone_routers.py
services/control/mantis_control/compiler/: bloom.py  build_empty_bundle.py  build_policy_bundle.py  gen_bloom_fixture.py  keys.py  signing.py
services/control/mantis_control/db/: models.py  session.py
services/control/mantis_control/dhcp/: kea_config.py  kea_config6.py  lease_sync.py
services/control/mantis_control/feeds/: catalog.json  ingest.py  parsers.py  seed.py
services/control/migrations/: env.py
services/control/migrations/versions/: 1200eeb54f99_dns_record_ddns_owner_mac.py  a1b2c3d4e5f6_widen_matched_feed_id.py  a3d7e91c4f56_dhcp_ddns_retry_queue.py  a7263be2ad89_baseline.py  b3f1c2a90d4e_block_page_templates.py  b6e2a814f9c3_pxe_uefi_boot_filename.py  b8e4f1a9c3d7_siem_syslog.py  c7d8e9f0a123_user_tenant_scope_constraint.py  d4a1f6c2b8e7_dns_record_ddns_owner_duid.py  e2c9a4f0b6d1_user_token_version.py  f4a9c1d3e8b2_native_dhcp_leases.py  fc7584542ce8_block_page_logo_text.py
services/control/scripts/: diagnose_category_bloom.py  diagnose_stub_zone.py  dump_openapi.py  reset_admin_password.py
services/control/tests/: test_auth.py  test_block_page.py  test_bloom.py  test_build_policy_bundle.py  test_config.py  test_crypto.py  test_csrf_middleware.py  test_dhcp6_ddns_ownership.py  test_dhcp_ddns_ownership.py  test_dhcp_routers.py  test_feed_ingest.py  test_feed_lock_ordering.py  test_group_crud.py  test_kea_config.py  test_last_admin_guard.py  test_local_zones_endpoint.py  test_policy_test_endpoint.py  test_query_event_retention.py  test_rate_limit.py  test_reindex.py  test_siem_syslog.py  test_ssrf_guard.py  test_tenant_crud.py  test_token_version.py  test_upstream_bundle_schema.py  test_upstream_probe_ssrf.py  test_zone_validation.py
services/dhcp/: Dockerfile
services/dhcp/mantis-dhcp/: Cargo.toml  README-tests.md
services/dhcp/mantis-dhcp/src/: config.rs  config6.rs  conflict.rs  db.rs  db6.rs  ddns.rs  lib.rs  main.rs  metrics.rs  metrics6.rs  options.rs  options6.rs  server.rs  server6.rs
services/filter/: Dockerfile
services/filter/aegis-filter/: Cargo.toml
services/filter/aegis-filter/examples/: query_dns.rs
services/filter/aegis-filter/src/: cache.rs  health_monitor.rs  lib.rs  main.rs  metrics_init.rs  router.rs  telemetry.rs  upstream_bundle.rs
services/filter/aegis-filter/tests/: dns_server.rs  router_integration.rs
services/filter/mantis-bundle/: Cargo.toml  build.rs
services/filter/mantis-bundle/examples/: check_membership.rs  verify_bundle.rs
services/filter/mantis-bundle/src/: lib.rs
services/filter/mantis-filter/: Cargo.toml
services/filter/mantis-filter/examples/: query_dns.rs
services/filter/mantis-filter/src/: blockpage.rs  cache.rs  health_monitor.rs  lib.rs  main.rs  metrics_init.rs  router.rs  telemetry.rs  tls_pin.rs  upstream_bundle.rs  zone_store.rs
services/filter/mantis-filter/tests/: block_response.rs  dns_server.rs  router_integration.rs  tcp_idle_timeout.rs
services/kea/: Dockerfile  aegis-ddns-bridge.sh  entrypoint.sh  kea-ctrl-agent.conf  kea-dhcp4.conf  kea-dhcp6.conf  mantis-ddns-bridge.sh
testbench/dhcp/: README.md  docker-compose.yml
(+104 files in other folders)
