[package]
name = "mantis-dhcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
arc-swap = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }

dhcproto = "0.15"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# Same major version dhcproto itself pulls in transitively (xid randomization) --
# pinned explicitly because mantis-dhcp6's own IA_NA/IA_PD pool selection uses it
# directly (see db6.rs) for a random-probe pick within a /64-scale range, where a
# sequential scan the way v4's small pools use isn't feasible.
rand = "0.10"
socket2 = { version = "0.5", features = ["all"] } # "all" gates bind_device (SO_BINDTODEVICE), Linux-only regardless
# Already resolved transitively (tokio/socket2's own dependency tree); declared
# directly because main.rs calls getifaddrs(3) itself, to auto-derive each
# per-interface socket's own server-identifier address (see main.rs's
# interface_ipv4_addr) instead of stamping one global operator-configured IP
# into every reply regardless of which subnet it's actually going out on.
libc = "0.2"
