[package]
name = "mantis-bundle"
version = "0.1.0"
edition.workspace = true

[dependencies]
prost = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
mantis-policy = { path = "../mantis-policy" }

[build-dependencies]
prost-build = "0.13"
protox = "0.7"
