[package]
name = "mantis-filter"
version = "0.1.0"
edition.workspace = true

[lib]
name = "mantis_filter"
path = "src/lib.rs"

[[bin]]
name = "mantis-filter"
path = "src/main.rs"

[dependencies]
mantis-bundle = { path = "../mantis-bundle" }
mantis-policy = { path = "../mantis-policy" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
arc-swap = { workspace = true }
ed25519-dalek = { workspace = true }
prost = { workspace = true }
async-trait = "0.1"
ipnet = { workspace = true }
serde = { workspace = true }
serde_json = "1"
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
